operators-helm/operators/envoy-gateway/resources/homelab-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
  namespace: envoy-gateway-system
  annotations:
spec:
  infrastructure:
    labels:
      gateway: envoy
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: prod-web-config
  gatewayClassName: envoy
  addresses:
  - type: IPAddress
    value: 192.168.0.243
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All

  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
        - name: homelab-cert
          namespace: envoy-gateway-system
        - name: saima-cert
          namespace: envoy-gateway-system
    allowedRoutes:
      namespaces:
        from: All
